ASP Identity + Sqlite for identity Db context

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,9 @@
 ﻿{
   "greeting": "A configurable hello, to you!",
-  "database": {
+  "mainDatabase": {
     "connection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=GetStarted"
-  } 
+  },
+  "identityDatabase": {
+    "connection": "Data Source=.\\identity.sqlite"
+  }
 }
